--- a/style.css
+++ b/style.css
@@ -219,7 +219,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url('./assets/img/wood-gf8597b07d_1920.jpg') top center;
+  background: url(./backrt.webp) top center;
   background-size: cover;
 }
 
